# stream_lit-project

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/stream_lit/: main.py  script.py
