[project]
name = "stream-lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suleman-Sabir", email = "sulemanbhatti690@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.45.0",
]

[project.scripts]
stream-lit = "stream_lit:main"
suleman = "stream_lit.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
